--- a/CodingEventsAPI/appsettings.json
+++ b/CodingEventsAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "KeyVaultName": "",
+  "KeyVaultName": "dennis-0720-secrets-kv",
   "JWT": {
     "ADB2C": {
       "RequireHttpsMetadata": true,
