--- a/CodingEventsAPI/appsettings.json
+++ b/CodingEventsAPI/appsettings.json
@@ -7,11 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerOrigin": "",
+  "ServerOrigin": "https://localhost:5001",
   "KeyVaultName": "",
   "JWTOptions": {
-    "Audience": "",
-    "MetadataAddress": "",
+    "Audience": "281e4663-aa59-47e6-9f11-a1c7e8f7e048",
+    "MetadataAddress": "https://dennis0720tenant.b2clogin.com/dennis0720tenant.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1_susi-flow",
     "RequireHttpsMetadata": true,
     "TokenValidationParameters": {
       "ValidateIssuer": true,
