--- a/CodingEventsAPI/appsettings.json
+++ b/CodingEventsAPI/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerOrigin": "https://localhost:5001",
-  "KeyVaultName": "",
+  "ServerOrigin": "https://23.96.46.84",
+  "KeyVaultName": "dennis-unit7studio-kv",
   "JWTOptions": {
     "Audience": "281e4663-aa59-47e6-9f11-a1c7e8f7e048",
     "MetadataAddress": "https://dennis0720tenant.b2clogin.com/dennis0720tenant.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1_susi-flow",
