unit 9 studio 2 appsettings.json update with keyvault name, deleted old studio info

--- a/CodingEventsAPI/appsettings.json
+++ b/CodingEventsAPI/appsettings.json
@@ -7,11 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ServerOrigin": "https://23.96.46.84",
-  "KeyVaultName": "dennis-unit7studio-kv",
+  "ServerOrigin": "",
+  "KeyVaultName": "dennis-lc0820-ps-kv",
   "JWTOptions": {
     "Audience": "f44366ad-a896-4910-b1d4-8bc62c807b7a",
-    "MetadataAddress": "https://dennis0720tenant.b2clogin.com/dennis0720tenant.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1_susi-flow",
+    "MetadataAddress": "",
     "RequireHttpsMetadata": true,
     "TokenValidationParameters": {
       "ValidateIssuer": true,
