--- a/CodingEventsAPI/appsettings.json
+++ b/CodingEventsAPI/appsettings.json
@@ -10,7 +10,7 @@
   "ServerOrigin": "",
   "KeyVaultName": "dennis-lc0820-ps-kv",
   "JWTOptions": {
-    "Audience": "f44366ad-a896-4910-b1d4-8bc62c807b7a",
+    "Audience": "",
     "MetadataAddress": "",
     "RequireHttpsMetadata": true,
     "TokenValidationParameters": {
